@@ -168,6 +168,8 @@ Core and Builtins
 Library
 -------
 
+- PEP 372:  Added collections.OrderedDict().
+
 - Issue #4308: httplib.IncompleteRead's repr doesn't include all of the data all
   ready received.
 
